# discord-mic-bot

./: .env.example  .gitignore  README.md  discord-mic-bot  discord-mic-bot.cmd  pyproject.toml  pyrightconfig.json  requirements.txt
discord_mic_bot/: __main__.py  lumeter.py  model.py  view.py
dmb/: __init__.py  __main__.py  lumeter.py  model.py  view.py  vumeter.py
