[project]
name = "discord-mic-bot"
version = "0.1.0"
description = "Discord bot to connect to your microphone with stereo sound"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [
    { name = "Star Brilliant" },
]
dependencies = [
    "discord.py[voice]>=2.7",
    "numpy",
    "scipy-stubs[scipy]",
    "sounddevice",
]

[project.scripts]
discord-mic-bot = "dmb:main"

[dependency-groups]
dev = [
    "pyright",
    "ruff",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dmb*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.format]
quote-style = "preserve"
