[project]
name = "discord-mic-bot"
version = "0.1.0"
description = "Discord bot to connect to your microphone with stereo sound"
readme = "README.md"
requires-python = ">= 3.12"
license = "GPL-3.0-or-later"
authors = [
    { name = "Star Brilliant" },
]
dependencies = [
    # "discord.py[voice] >= 2.7",

    # Importing the [voice] optional feature manually because of a CVE in PyNaCl < 1.6.2
    "discord.py >= 2.7",
    "PyNaCl >= 1.6.2",
    "davey",

    "numpy",
    "scipy-stubs[scipy]",
    "sounddevice",
]

[project.scripts]
discord-mic-bot = "discord_mic_bot:main"

[dependency-groups]
dev = [
    "pyright",
    "ruff",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["discord_mic_bot"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.format]
quote-style = "preserve"
